--- a/index.html
+++ b/index.html
@@ -179,28 +179,45 @@
         ).textContent = `Word Count: ${wordCount}`;
       }
 
-      function toggleTheme() {
-        const body = document.body;
-        const container = document.querySelector(".container");
-        const textarea = document.querySelector("textarea");
-        const countContainer = document.querySelector(".count-container");
-        const themeText = document.getElementById("themeText");
-        const pageTitle = document.getElementById("pageTitle");
+      document.addEventListener("DOMContentLoaded", function () {
+        // โหลดสถานะธีมจาก localStorage
+        const isDarkMode = localStorage.getItem("darkMode") === "true";
 
-        body.classList.toggle("dark-mode");
-        container.classList.toggle("dark-mode");
-        textarea.classList.toggle("dark-mode");
-        countContainer.classList.toggle("dark-mode");
-        pageTitle.classList.toggle("dark-mode"); // เพิ่มการเปลี่ยนธีมให้กับ h1
-
-        if (body.classList.contains("dark-mode")) {
-          themeText.textContent = "Dark Mode";
-          pageTitle.textContent = "Text Counter";
-        } else {
-          themeText.textContent = "Light Mode";
-          pageTitle.textContent = "Text Counter";
+        if (isDarkMode) {
+          applyDarkMode();
+          document.getElementById("themeSwitcher").checked = true;
         }
+      });
+
+      function toggleTheme() {
+        const isDarkMode = document.body.classList.toggle("dark-mode");
+
+        document.querySelector(".container").classList.toggle("dark-mode");
+        document.querySelector("textarea").classList.toggle("dark-mode");
+        document
+          .querySelector(".count-container")
+          .classList.toggle("dark-mode");
+        document.getElementById("pageTitle").classList.toggle("dark-mode");
+
+        // อัปเดตข้อความ
+        document.getElementById("themeText").textContent = isDarkMode
+          ? "Dark Mode"
+          : "Light Mode";
+
+        // บันทึกสถานะธีมลง localStorage
+        localStorage.setItem("darkMode", isDarkMode);
       }
+
+      function applyDarkMode() {
+        document.body.classList.add("dark-mode");
+        document.querySelector(".container").classList.add("dark-mode");
+        document.querySelector("textarea").classList.add("dark-mode");
+        document.querySelector(".count-container").classList.add("dark-mode");
+        document.getElementById("pageTitle").classList.add("dark-mode");
+
+        document.getElementById("themeText").textContent = "Dark Mode";
+      }
+      
     </script>
   </body>
 </html>
